simplest pom possible